<resources>
    <string name="app_name">K-app_v1</string>
    <string name="start_text" translatable="false">Hai să\n învățăm și să\n ne distrăm!</string>
    <string name="start_button_text" translatable="false">Start</string>
    <string name="mainMenu_text" translatable="false">MENIUL PRINCIPAL</string>
    <string name="mate_text" translatable="false">Matematică</string>
    <string name="romana_text" translatable="false">Limba Română</string>
    <string name="profil_text" translatable="false">Profil</string>
    <string name="progres_text" translatable="false">Progresul meu</string>
    <string name="login_text" translatable="false">Loghează-te</string>
    <string name="parola_text" translatable="false">Parola</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="create_account_text" translatable="false">Nu ai încă un cont?</string>
    <string name="signup_text" translatable="false">Înregistrează-te</string>
    <string name="background" translatable="false">Background</string>
    <string name="login_icon" translatable="false">LoginIcon</string>
    <string name="titlu_mate" translatable="false">Pe ce te concentrezi astăzi?</string>
    <string name="adunari_text" translatable="false">Adunări</string>
    <string name="scaderi_text" translatable="false">Scăderi</string>
    <string name="inmultiri_text" translatable="false">Înmulțiri</string>
    <string name="impartiri_text" translatable="false">Împărțiri</string>
    <string name="titlu_adunari" translatable="false">Cu ce numere te vei distra mai departe?</string>
    <string name="titlu_inmultiri" translatable="false">Ce dificultate vei alege acum?</string>
    <string name="titlu_operații" translatable="false">Care este rezultatul operației?</string>
    <string name="adunari0" translatable="false">De la 0\nla 31</string>
    <string name="adunari1" translatable="false">De la 0\nla 100</string>
    <string name="adunari2" translatable="false">De la 0\nla 1000</string>
    <string name="adunari3" translatable="false">De la 0\nla 10000</string>
    <string name="adunari4" translatable="false">De la 0\nla 1000000</string>
    <string name="verifBtn" translatable="false">Verifică</string>
    <string name="hint" translatable="false">Introdu răspunsul</string>
    <string name="scor" translatable="false">Scor: 0</string>
    <string name="add_oper" translatable="false">2 + 3 =</string>
    <string name="inm_usor" translatable="false">Ușor</string>
    <string name="inm_mediu" translatable="false">Mediu</string>
    <string name="inm_greu" translatable="false">Greu</string>
    <string name="gaseste_intrusul" translatable="false">GĂSEȘTE INTRUSUL</string>
    <string name="cuvant_intrus" translatable="false">Ce cuvânt este intrus?</string>
    <string name="ghiceste_contextul" translatable="false">GHICEȘTE CONTEXTUL</string>
    <string name="categorie_cuvant" translatable="false">Din ce categorie fac parte cuvintele?</string>
    <string name="formeaza_cuvantul" translatable="false">FORMEAZĂ CUVÂNTUL</string>
    <string name="grup_litere" translatable="false">POTRIVEȘTE GRUPUL DE LITERE</string>
    <string name="mesaj_felicitari" translatable="false">Felicitări!\nAi terminat toate exercițiile! 🎉</string>
    <string name="mesaj_mai_incearca" translatable="false">Încearcă din nou! ❌</string>
    <string name="mesaj_bravo" translatable="false">Bravo! ✅</string>
    <string name="titlu_missing_letter">Ce literă lipsește?</string>
    <string name="titlu_ex1_silabe">Câte silabe sunt în\ncuvântul de mai jos?</string>
    <string name="titlu_silabe2">Pune silabele în ordine</string>
    <string name="titlu_comparare">Alege un nivel</string>
    <string name="titlu_comparare1">Alege imaginea cu mai multe elemente</string>
    <string name="titlu_comparare23">Alege semnul potrivit</string>
    <string name="buton_am_terminat">Am terminat</string>
    <string name="cifre">Cifre</string>
    <string name="mesaj_gresit">Greșit! ❌</string>
    <string name="titlu_adunare">Care este rezultatul adunării?</string>
    <string name="titlu_scadere">Care este rezultatul scăderii?</string>
    <string name="titlu_adunare1">Câte elemente sunt în total?</string>
    <string name="titlu_scaderi1">Câte elemente mai rămân în imagine, după ce scoatem respectivele?</string>
</resources>